--- a/css/me/index.html
+++ b/css/me/index.html
@@ -31,8 +31,7 @@ February 19, 2023 -->
         </figure>
       <article id = "Background">
         <h2>Background</h2>
-        <p>I grew up in South Korea for a long time and started studying abroad when I was in elementary school. I studied in the Philippines for about two years at a school called Mater Dei Academy in Tagaytay. Then I went to KIS (Korea International School) Jeju Campus when I was in middle school. I took the qualification exam in South Korea to graduate high school education, and moved to Seattle to attend college.</p>
-        <p>I transferred to New York University in 2022 and am a Junior majoring in computer science.</p>
+        <p>Graduated in Spring 2024 as a dynamic Computer Science student at New York University with a strong foundation in both theoretical and applied aspects of technology. Versatile in a spectrum of programming languages, I am driven by the challenge of solving complex problems and contributing to meaningful technological advancements. My experience includes initiating a LikeLion coding club at NYU and serving as a Girls Who Code college mentor, gaining valuable experience in leadership, team building, and collaboration</p>       
       </article>
     </main>
     <footer>
