--- a/css/me/index.html
+++ b/css/me/index.html
@@ -31,7 +31,7 @@ February 19, 2023 -->
         </figure>
       <article id = "Background">
         <h2>Background</h2>
-        <p>Graduated in Spring 2024 as a dynamic Computer Science student at New York University with a strong foundation in both theoretical and applied aspects of technology. Versatile in a spectrum of programming languages, I am driven by the challenge of solving complex problems and contributing to meaningful technological advancements. My experience includes initiating a LikeLion coding club at NYU and serving as a Girls Who Code college mentor, gaining valuable experience in leadership, team building, and collaboration</p>       
+        <p>Graduated in Spring 2024 as a dynamic Computer Science student at New York University with a strong foundation in both theoretical and applied aspects of technology. Versatile in a spectrum of programming languages, I am driven by the challenge of solving complex problems and contributing to meaningful technological advancements. My experience includes initiating a LikeLion coding club at NYU and serving as a Girls Who Code college mentor, gaining valuable experience in leadership, team building, and collaboration.</p>       
       </article>
     </main>
     <footer>
